--- a/src/index.css
+++ b/src/index.css
@@ -4,24 +4,122 @@
   box-sizing: border-box;
   font-family: "Merriweather", serif;
   font-weight: 300;
-  font-style: normal;
+  
+}
+
+a{
+  text-decoration: none !important;
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+
+div.btn{
+  width: 7rem;
+  background-color: var(--btn-primary-color) !important;
+  transition: transform 2s !important;
+}
+div.btn:hover{
+  transform: scale(1.2) ; 
+}
+div.btn-signin{
+  color: var(--bg-tertiary-color) !important;
+}
+div.btn-signup{
+  border: 0.1rem solid var(--btn-primary-color) !important;
+  background-color: var(--card-primary-color) !important;
+}
+div.btn-signup:hover{
+  color: var(--bg-color) !important;
+  background-color: var(--btn-primary-color) !important;
 }
 
 :root {
+  /* bg colors */
   --bg-color: #ebf1f9;
   --bg-secoendary-color: #ffffff96;
   --bg-tertiary-color: #ffffff;
+
   --text-primary-color: #000000;
+  --text-muted: #555555f1;
+
   --btn-primary-color: #6a71f1;
   --btn-secondary-color:  #6eb4ff;
+
+  --card-primary-color : #E8EEFB;
+
+  /* borders */
+  --card-border-radius: 1rem;
 }
 
 body {
   height: 100vh;
-  background-image: url('/public/assets/photos/auth-bg2.jpg');
+  background-color:   var(--card-primary-color) !important;
   background-size: cover;
   background-position: center;
 }
+/* _____________________________navbar style_________________________________ */
+
+nav{
+  background-color: var(--bg-color) !important;
+}
+.nav__logo{
+  height: 3rem;
+}
+.nav__logo:hover{
+  cursor: pointer;
+}
+/* __________________________ HOME page style______________________________ */
+.carousel__image{
+  height: 60vh;
+}
+
+/* section about */
+.section__about__header span{
+  color: var( --btn-primary-color);
+}
+
+
+
+
+/* section items */
+
+.section__item{
+  height: fit-content;
+  width: 36vh !important;
+  margin-bottom: 1rem;
+  background-color: var(--card-primary-color);
+  border-radius: var(--card-border-radius);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  transition: transform 1s ease-in-out;
+}
+.section__item:hover{
+  transform: scale(1.1); 
+ 
+}
+.section__item__img{
+  width: 32vh !important;
+  height: 35vh;
+  margin: 2vh .5vh;
+  border-radius: .5rem;
+  transition: transform 2s;
+}
+.section__item__img:hover{
+  
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  transform: scaleY(1.1); 
+  z-index: 5;
+  position: relative;
+  top: -2rem;
+  cursor: pointer;
+
+}
+.card-body{
+  margin: .5vh .5vh;
+}
+.card-text {
+  color: var(--text-muted);
+}
+/* __________________________auth forms style______________________________ */
 
 .register__main {
   min-height: 100vh;
@@ -31,7 +129,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  max-width: 15rem; /* Adjust as per your logo size */
+  max-width: 15rem;
   margin: .3rem;
   z-index: 1;
 }
@@ -43,8 +141,8 @@ body {
   border-radius: 1rem;
   display: flex;
   justify-content: center;
-  background-color: var(--bg-color);/* Adjust as per your design */
-  box-shadow: .5rem .5rem 1rem .1rem var(--text-primary-color); /* Adjust shadow as per your design */
+  background-color: var(--bg-color);
+  box-shadow: .5rem .5rem 1rem .1rem var(--text-primary-color); 
 }
 
 .register__form {
@@ -85,16 +183,16 @@ body {
   width: 98% !important;
   padding: 0.75rem;
   margin: auto;
-  background-color: var(--btn-primary-color); /* Adjust button color as per your design */
-  color: var(--bg-tertiary-color); /* Adjust text color as per your design */
+  background-color: var(--btn-primary-color); 
+  color: var(--bg-tertiary-color); 
   border: none;
-  border-radius: 4px; /* Adjust border-radius as per your design */
+  border-radius: 4px; 
   cursor: pointer;
   transition: background-color 1s ease;
 }
 
 .register__form__btn:hover {
-  background-color: var(--btn-secondary-color); /* Adjust hover color as per your design */
+  background-color: var(--btn-secondary-color); 
 }
 
 
@@ -103,4 +201,11 @@ body {
 
 .main__login__fromSection__form{
   width: 80%;
+}
+
+/* __________________________Footer______________________ */
+
+footer{
+  background-color: var(--card-primary-color) !important;
+  border-top: solid .1px rgba(190, 189, 189, 0.705);
 }
